--- a/SportsSideKick/app/src/main/res/values-ar/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-ar/strings.xml
@@ -4,18 +4,18 @@
     <string name="add_friend_hint">أدخل اسم صديقك، أو بريده أو رقم هاتفه في خانة البحث.</string>
     <string name="add_friends_to_chat">إضافة أصدقاء إلى المحادثة</string>
     <string name="add_new_chat">إضافة محادثة جديدة</string>
-    <string name="add_users">إضافة الأصدقاء إلى المحادثة</string>
+    <string name="chat_friends_add">إضافة الأصدقاء إلى المحادثة</string>
     <string name="are_you_sure">هل أنت متأكد</string>
     <string name="back">ظهر</string>
-    <string name="button_allow">السماح</string>
-    <string name="button_deny">منع</string>
+    <string name="allow">السماح</string>
+    <string name="deny">منع</string>
     <string name="cancel">إلغاء</string>
     <string name="cant_start_video">لا يمكن بدء تشغيل الفيديو.</string>
     <string name="caps">CAPS</string>
     <string name="caps_level">مستوى الـCaps</string>
     <string name="chat">محادثة</string>
     <string name="chat_Leave">خروج</string>
-    <string name="chat_already_in_group">"أنت بالفعل في دردشة ثي. "</string>
+    <string name="already_in_group">"أنت بالفعل في دردشة ثي. "</string>
     <string name="chat">محادثة</string>
     <string name="chat_choose_from_library">اختر من المعرض</string>
     <string name="chat_choose_option">اختر الخيار</string>
@@ -24,11 +24,11 @@
     <string name="chat_friend_in_chat">1 صديق في الدردشة</string>
     <string name="chat_image_or_video">هل تريد التقاط صورة أو تسجيل فيديو؟</string>
     <string name="chat_friends_in_chat">الأصدقاء في الدردشة</string>
-    <string name="chat_hint">أدخل رسالتك هنا…</string>
+    <string name="message_hint">أدخل رسالتك هنا…</string>
     <string name="chat_hold">اضغط باستمرار للتسجيل</string>
     <string name="chat_image">صورة</string>
     <string name="chat_image_downloaded">يتم تنزيل الصورة.</string>
-    <string name="chat_join_group">الانضمام للمحادثة</string>
+    <string name="join_group">الانضمام للمحادثة</string>
     <string name="chat_leave_chat">الخروج من المحادثة؟</string>
     <string name="chat_members">أفراد</string>
     <string name="chat_name">اسم المحادثة</string>
@@ -56,12 +56,12 @@
     <string name="days">أيام</string>
     <string name="days_using">الأيام منذ بدء استخدام اللعبة</string>
     <string name="create_call">بدء اتصال جديد</string>
-    <string name="dialog_internet_connection_failed">عليك أن تكون متصلاً بالانترنت لتقوم بهذا</string>
+    <string name="internet_needed">عليك أن تكون متصلاً بالانترنت لتقوم بهذا</string>
     <string name="delete">حذف</string>
-    <string name="dialog_message_facebook_error">لم يتم تلقي ملفك العام. الرجاء المحاولة مجدداً!</string>
-    <string name="dialog_message_not_valid_email">الرجاء إدخال بريد الكتروني فعال!</string>
-    <string name="dialog_ok">حسناً</string>
-    <string name="dialog_warning">تحذير</string>
+    <string name="facebook_error">لم يتم تلقي ملفك العام. الرجاء المحاولة مجدداً!</string>
+    <string name="email_not_valid">الرجاء إدخال بريد الكتروني فعال!</string>
+    <string name="ok">حسناً</string>
+    <string name="warning">تحذير</string>
     <string name="done">تم</string>
     <string name="edit">تعديل</string>
     <string name="edit_chat">تعديل</string>
@@ -76,7 +76,7 @@
     <string name="fantasy">مضاربة</string>
     <string name="find">إيجاد</string>
     <string name="first_name">الاسم الأول</string>
-    <string name="first_name_profile">الاسم الأول</string>
+    <string name="first_name">الاسم الأول</string>
     <string name="follow_more">متابعة المزيد</string>
     <string name="followers">المتابعون</string>
     <string name="following">متابع</string>
@@ -91,10 +91,10 @@
     <string name="friend_follow">متابعة صديق</string>
     <string name="friend_in_video_chat">1 صديق في دردشة الفيديو</string>
     <string name="friend_profile">معلومات الصديق</string>
-    <string name="friend_request">إرسال طلب صداقة</string>
+    <string name="friend_request_send">إرسال طلب صداقة</string>
     <string name="friend_request_pending">طلب الصداقة بالانتظار</string>
     <string name="friend_requests">طلبات الصداقة</string>
-    <string name="friend_un_follow">إيقاف متابعة صديق</string>
+    <string name="friend_unfollow">إيقاف متابعة صديق</string>
     <string name="friend_you_and">الأصدقاء، وأنت، و</string>
     <string name="friends">الأصدقاء</string>
     <string name="friends_following_you">الأصدقاء المتابعون لك:</string>
@@ -116,10 +116,10 @@
     <string name="join_now_sign_in">انضم الآن / تسجيل الدخول</string>
     <string name="language">اللغة</string>
     <string name="last_name">الاسم الأخير</string>
-    <string name="last_name_profile">الاسم الأخير</string>
+    <string name="last_name">الاسم الأخير</string>
     <string name="likes_received">الإعجابات المتلقاة</string>
     <string name="live">مباشر</string>
-    <string name="location_caption">الموقع</string>
+    <string name="location">الموقع</string>
     <string name="log_in_with_facebook">تسجيل الدخول باستخدام فيسبوك</string>
     <string name="login_login">تسجيل الدخول</string>
     <string name="login_login_forgot_text">نسيت كلمة السر؟</string>
@@ -141,8 +141,8 @@
     <string name="match_mins">%1$d دقائق</string>
     <string name="match_sec">%1$d ثانية</string>
     <string name="match_secs">%1$d ثواني</string>
-    <string name="matches_attended_away">المباريات الملعوبة (أرض اللاعب)</string>
-    <string name="matches_attended_home">المباريات الملعوبة (أرض الخصم)</string>
+    <string name="matches_away">المباريات الملعوبة (أرض اللاعب)</string>
+    <string name="matches_home">المباريات الملعوبة (أرض الخصم)</string>
     <string name="member_info">معلومات العضو</string>
     <string name="member_since">مسجل منذ</string>
     <string name="mins_ago">دقائق</string>
@@ -154,10 +154,10 @@
     <string name="news_install_twitter">الرجاء تثبيت تطبيق تويتر.</string>
     <string name="news_post_to_wall_message">هل ترغب بنشر هذا على حائطك؟?</string>
     <string name="news_post_to_wall_title">هل ترغب بنشر هذا على حائطك؟?</string>
-    <string name="next_match">المباراة القادمة</string>
+    <string name="match_next">المباراة القادمة</string>
     <string name="nickname">الاسم المستعار</string>
-    <string name="no_connection_message">عليك أن تكون متصلاً بالانترنت لتقوم بهذا</string>
-    <string name="no_connection_title">لا اتصال</string>
+    <string name="internet_needed">عليك أن تكون متصلاً بالانترنت لتقوم بهذا</string>
+    <string name="no_connection">لا اتصال</string>
     <string name="no_friends">لا أصدقاء</string>
     <string name="no_message_text">لم يبدأ الحديث أحد بعد! لم لا تكون أولهم؟</string>
     <string name="no_result">لا نتائج</string>
@@ -168,7 +168,7 @@
     <string name="offline">غير متصل</string>
     <string name="or">أو</string>
     <string name="password">كلمة السر</string>
-    <string name="password_caption">كلمة السر</string>
+    <string name="password">كلمة السر</string>
     <string name="people_in_this_chat">الأشخاص في هذه الدردشة</string>
     <string name="permission_camera_denied">تحتاج إلى تمكين الكاميرا في إعدادات لالتقاط صورة.</string>
     <string name="permission_camera_never_ask">لا تطلب إذن الكاميرا مرة أخرى.</string>
@@ -236,7 +236,7 @@
     <string name="terms_and_privacy">الشروط والخصوصية</string>
     <string name="this_chat_is_private">هذه المحادثة خاصة</string>
     <string name="this_chat_is_private_phone">هذه المحادثة خاصة</string>
-    <string name="this_chat_is_public">هذه المحادثة علنية</string>
+    <string name="chat_public">هذه المحادثة علنية</string>
     <string name="this_chat_is_public_phone">هذه المحادثة علنية</string>
     <string name="language_current">عربى</string>
 
@@ -244,8 +244,8 @@
     <string name="try_again_latter">الرجاء المحاولة مجدداً!</string>
     <string name="tutorial_earn">اضغط هنا لتربح لعرض هذه الكيفية!</string>
     <string name="unnamed_chat">غير مسمى</string>
-    <string name="un_friend_title">إزالة صديق سيوقف متابعتكما لبعضكم</string>
-    <string name="un_friend_message">" البعض. هل أنت متأكد من إزالة هذا الصديق؟"</string>
+    <string name="unfriend_confirm">إزالة صديق سيوقف متابعتكما لبعضكم</string>
+    <string name="unfriend_tip">" البعض. هل أنت متأكد من إزالة هذا الصديق؟"</string>
     <string name="up_next">التالي</string>
     <string name="uploading">تحميل…</string>
     <string name="user">المستخدم</string>
@@ -268,7 +268,7 @@
     <string name="video_chats">محادثات الفيديو</string>
     <string name="videos_watched">الفيديوهات المشاهدة</string>
     <string name="vs">ضد</string>
-    <string name="waiting_for_active_internet_connection">في انتظار اتصال إنترنت نشط</string>
+    <string name="waiting_for_internet">في انتظار اتصال إنترنت نشط</string>
     <string name="wall">جدار</string>
     <string name="wall">جدار</string>
     <string name="wall_posts">منشورات الحائط</string>
