--- a/SportsSideKick/app/src/main/res/values-bh/strings.xml
+++ b/SportsSideKick/app/src/main/res/values-bh/strings.xml
@@ -45,16 +45,16 @@
     <string name="phone_number_validation_warning">Please fill in your phone number.</string>
     <string name="last_name_validation_warning">Please fill in your last name.</string>
 
-    <string name="dialog_ok">OK</string>
-    <string name="button_allow">Allow</string>
-    <string name="button_deny">Deny</string>
-    <string name="dialog_warning">Warning</string>
+    <string name="ok">OK</string>
+    <string name="allow">Allow</string>
+    <string name="deny">Deny</string>
+    <string name="warning">Warning</string>
     <string name="uploading">Uploading…</string>
 
     <!-- Dialogs -->
-    <string name="dialog_message_not_valid_email">Please enter a valid email address!</string>
-    <string name="dialog_internet_connection_failed">You need to be connected to the internet to do this</string>
-    <string name="dialog_message_facebook_error">Your public profile could not be received. Please try again!</string>
+    <string name="email_not_valid">Please enter a valid email address!</string>
+    <string name="internet_needed">You need to be connected to the internet to do this</string>
+    <string name="facebook_error">Your public profile could not be received. Please try again!</string>
 
     <!-- Fragment captions -->
     <string name="wall">The Wall</string>
@@ -94,7 +94,7 @@
     <string name="share_using">Share with:</string>
     <string name="enter_comment_hint">Enter your comment here...</string>
 
-    <string name="this_chat_is_public">This chat is public</string>
+    <string name="chat_public">This chat is public</string>
     <string name="this_chat_is_private">This chat is private</string>
     <string name="manage_public_chat_caption">Add friends to %1s</string>
     <string name="create_chat">Create Chat</string>
@@ -104,8 +104,8 @@
     <string name="your_profile">Your Profile</string>
     <string name="contact_info">Contact info</string>
     <string name="subscribed_since">Subscribed since</string>
-    <string name="location_caption">Location</string>
-    <string name="password_caption">Password</string>
+    <string name="location">Location</string>
+    <string name="password">Password</string>
     <string name="image">image</string>
     <string name="chosen_language">Chosen language</string>
     <string name="your_statement">Your Statement</string>
@@ -164,8 +164,8 @@
     <!-- tutorial values -->
 
 
-    <string name="chat_join_group">Join Group</string>
-    <string name="chat_already_in_group">You are already in thi chat.</string>
+    <string name="join_group">Join Group</string>
+    <string name="already_in_group">You are already in thi chat.</string>
     <string name="chat_members">Members</string>
     <string name="chat_edit">Edit</string>
     <string name="chat_Leave">Leave</string>
@@ -202,8 +202,8 @@
     <string name="enter_valid_password_and_display_name">Please enter valid password and user name</string>
     <string name="login_try_again">Please re-enter your password and try again</string>
     <string name="remove_friend">Un-Friend</string>
-    <string name="friend_request">Send Friend Request</string>
-    <string name="friend_un_follow">Un-Follow Friend</string>
+    <string name="friend_request_send">Send Friend Request</string>
+    <string name="friend_unfollow">Un-Follow Friend</string>
     <string name="friend_follow">Follow Friend</string>
     <string name="registration_error">Registration error. Try again later.</string>
     <string name="registration_error_username_taken">Registration error - username already taken, please select a different username.</string>
@@ -221,14 +221,14 @@
     <string name="chats">Chats</string>
     <string name="video_chats">Video chats</string>
     <string name="public_chats">Public chats</string>
-    <string name="matches_attended_home">Matches attended (home)</string>
-    <string name="matches_attended_away">Matches attended (away)</string>
+    <string name="matches_home">Matches attended (home)</string>
+    <string name="matches_away">Matches attended (away)</string>
     <string name="likes_received">Likes received</string>
     <string name="comments_made">Comments made</string>
     <string name="up_next">UP NEXT</string>
     <string name="live">LIVE</string>
     <string name="tutorial_earn">Tap here to earn 5 for viewing this How to!</string>
-    <string name="add_users">Add friends to this chat</string>
+    <string name="chat_friends_add">Add friends to this chat</string>
     <string name="playlist">PLAYLIST</string>
     <string name="default_time" translatable="false">00:00 / 00:00</string>
     <string name="write_post_hint">Write your post here.</string>
@@ -272,7 +272,7 @@
     <string name="add_new_chat">ADD NEW CHAT</string>
     <string name="demo_caption" translatable="false">Demo caption Demo caption Demo caption Demo caption</string>
     <string name="comment_text" translatable="false">Demo Comment text</string>
-    <string name="chat_hint">Enter your message here…</string>
+    <string name="message_hint">Enter your message here…</string>
     <string name="create">Create</string>
     <string name="demo_content" translatable="false">Demo content.</string>
     <string name="demo_content_lorem_short" translatable="false">Ut enim ad minima veniam.</string>
@@ -287,9 +287,9 @@
     <string name="soccer_boot" translatable="false">SOCCER BOOT</string>
     <string name="shop">Shop</string>
     <string name="store_big">STORE</string>
-    <string name="waiting_for_active_internet_connection">Waiting for active internet connection…</string>
-    <string name="no_connection_title">No Connection</string>
-    <string name="no_connection_message">You need to be connected to the internet to do this</string>
+    <string name="waiting_for_internet">Waiting for active internet connection…</string>
+    <string name="no_connection">No Connection</string>
+    <string name="internet_needed">You need to be connected to the internet to do this</string>
 
     <integer name="progress_bar_max">100</integer>
     <integer name="progress_bar_30">30</integer>
@@ -320,8 +320,8 @@
     <string name="language">Language:</string>
     <string name="phone">Phone:</string>
     <string name="user_name">User Name:</string>
-    <string name="last_name_profile">Last Name:</string>
-    <string name="first_name_profile">First Name:</string>
+    <string name="last_name">Last Name:</string>
+    <string name="first_name">First Name:</string>
     <string name="profile">Profile</string>
     <string name="stash">Stash</string>
     <string name="join_official_account"><![CDATA[Join official Account >]]></string>
@@ -378,8 +378,8 @@
     <string name="friend_request_pending">Friend Request Pending</string>
     <string name="request_pending">Request Pending</string>
 
-    <string name="un_friend_message"> Removing a friend will stop you following each other.</string>
-    <string name="un_friend_title">Are you sure you want to remove this friend?</string>
+    <string name="unfriend_tip"> Removing a friend will stop you following each other.</string>
+    <string name="unfriend_confirm">Are you sure you want to remove this friend?</string>
 
     <string name="read_more_closed">Read more  &gt;</string>
     <string name="read_more_open">Read less  &lt;</string>
@@ -408,7 +408,7 @@
     <string name="disable_wall_notifications">Disable wall notifications</string>
     <string name="search">Search</string>
     <string name="pin_count_placeholder" translatable="false">--</string>
-    <string name="next_match">Next match</string>
+    <string name="match_next">Next match</string>
     <string name="ellipsis" translatable="false">…</string>
     <string name="message_time_splitter" translatable="false">|</string>
     <string name="password_placeholder" translatable="false">***********</string>
